Update SpaceInvaders.java